--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,18 @@ input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0px 1000px var(--input-box-shadow-color, #ffffff00)
     inset;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 html {
   scroll-behavior: smooth;
   font-family: 'DM Sans', sans-serif;
